Fix some layout issues

--- a/src/components/Icon/Icon.module.scss
+++ b/src/components/Icon/Icon.module.scss
@@ -19,6 +19,6 @@
   }
 
   &Padded {
-    margin-bottom: pxtorem(8);
+    margin-bottom: pxtorem(16);
   }
 }
